--- a/ui/public/stylesheets/RackTile.css
+++ b/ui/public/stylesheets/RackTile.css
@@ -6,6 +6,7 @@
   position: absolute;
   display: block;
   background-color: #8c2d36;
+  border-radius: 5%;
 }
 
 #rackTileLetter {
@@ -21,6 +22,19 @@
   font-weight: bold;
   font-family: Roboto, serif;
   z-index: 2;
+}
+
+#rackTileValue {
+  position: relative;
+  display: block;
+  color: white;
+  margin: 0;
+  top: 80%;
+  line-height: 0;
+  left: 75%;
+  font-size: 10pt;
+  font-weight: bold;
+  font-family: Roboto, serif;
 }
 
 /*# sourceMappingURL=RackTile.css.map */
