--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -64,6 +64,7 @@ button:focus-visible {
 body {
   margin: 0;
   display: flex;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
