--- a/ui/src/sass/RackTile.scss
+++ b/ui/src/sass/RackTile.scss
@@ -1,4 +1,4 @@
-$tileBackgroundColor: #8c2d36;
+@use "Global";
 
 .rackTileDiv{
     display: flex;
@@ -6,7 +6,8 @@ $tileBackgroundColor: #8c2d36;
 #rackTileBackground{
     position:absolute;
     display:block;
-    background-color: $tileBackgroundColor;
+    background-color: Global.$tileBackgroundColor;
+    border-radius: 5%;
 
 }
 #rackTileLetter{
@@ -22,4 +23,17 @@ $tileBackgroundColor: #8c2d36;
     font-weight: bold;
     font-family: Roboto, serif;
     z-index: 2;
+}
+#rackTileValue{
+    position: relative;
+    display: block;
+    color: white;
+    margin: 0;
+    top: 80%;
+    line-height: 0;
+    left:75%;
+
+    font-size: 10pt;
+    font-weight: bold;
+    font-family: Roboto, serif;
 }
