--- a/ui/src/sass/RackWidget.scss
+++ b/ui/src/sass/RackWidget.scss
@@ -1,4 +1,29 @@
+@use "Global";
+
+
 .rackWidgetDiv{
     display:flex;
     flex-direction: row;
+    margin-top: 15px;
+    justify-content: center;
+}
+#shuffleButton{
+    width: 48px;
+    height: 48px;
+    background-color: Global.$tileBackgroundColor;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+#exchangeButton{
+    width: 48px;
+    height: 48px;
+    background-color: Global.$tileBackgroundColor;
+    border-radius: 50%;
+    display:flex;
+    margin-left: 5px;
+}
+#exchangeButtonImage{
+    position: relative;
+    left:7px;
+    align-self: center;
 }
