--- a/src/sass/GamePage.scss
+++ b/src/sass/GamePage.scss
@@ -1,10 +1,11 @@
 .gamePageDiv{
     display: flex;
     position: relative;
-    left: -10%;
+    // left: -10%;
     margin-top: 10px;
 }
 
 .infoDiv{
     margin-left: 15px;
+    width: 400px;
 }
