--- a/src/sass/MoveHistoryWidget.scss
+++ b/src/sass/MoveHistoryWidget.scss
@@ -1,34 +1,47 @@
 .moveHistoryDiv{
-    width:inherit;
-    height:80%;
+    width: 60%;
+    height: 80%;
+    border: 1px solid #ccc
+    border-radius: 8px;
+    overflow: hidden;
 }
-#moveHistoryEntry{
-    display:flex;
+
+#moveHistoryList {
+    list-style: none;
+    padding: 0;
+    max-height: 100%;
+    overflow-y: scroll;
+}
+
+.moveHistoryEntry {
+    display: flex;
     flex-direction: row;
-    margin-top:20px;
-    margin-right: 10px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #eee
 }
-#moveHistoryEntryName{
-    width:40%;
-    margin-top:0px;
-    margin-bottom:0px;
+.moveHistoryEntryName{
+    width: 30%;
+    margin: 0;
+    font-weight: bold;
 }
-#moveString{
-    width:40%;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    // margin-left: 10px;
+.moveString{
+    width: 50%;
+    margin: 0;
 }
 #scoreDiv{
-    margin-left:auto;
-    display:flex;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 #moveScore, #totalScore{
-    margin: 0px;
+    margin: 5px 0;
+    font-weight: bold;
 }
+
 ul{
     padding:0px;
-    max-height:60%;
-    overflow: hidden;
+    max-height:100%;
     overflow-y: scroll;
 }
