--- a/public/stylesheets/ScoreDisplayWidget.css
+++ b/public/stylesheets/ScoreDisplayWidget.css
@@ -2,23 +2,28 @@
   display: flex;
   flex-direction: column;
   height: 10%;
+  justify-content: space-between;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
 }
 
-#player1ScoreDiv, #player2ScoreDiv {
+.playerScoreDiv {
   display: flex;
   flex-direction: row;
-  margin-bottom: 10%;
-}
-
-#player1Score, #player2Score {
-  margin-left: auto;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 #player1Name, #player2Name {
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin: 0;
+  font-weight: bold;
+}
+
+#player1Score, #player2Score {
+  margin: 0;
+  margin-left: 10px;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=ScoreDisplayWidget.css.map */
