--- a/src/sass/MoveHistoryWidget.scss
+++ b/src/sass/MoveHistoryWidget.scss
@@ -1,6 +1,8 @@
 .moveHistoryDiv{
-    width: 100%;
+    width: 60%;
     height: 80%;
+    border: 1px solid #ccc;
+    border-radius: 8px;
     overflow: hidden;
 }
 
@@ -14,27 +16,25 @@
 .moveHistoryEntry {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     padding: 10px;
+    border-bottom: 1px solid #eee
 }
-
 .moveHistoryEntryName{
     width: 30%;
     margin: 0;
     font-weight: bold;
 }
-
 .moveString{
     width: 50%;
     margin: 0;
 }
-
 #scoreDiv{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
-
 #moveScore, #totalScore{
     margin: 5px 0;
     font-weight: bold;
