--- a/public/stylesheets/MoveHistoryWidget.css
+++ b/public/stylesheets/MoveHistoryWidget.css
@@ -1,53 +1,17 @@
-.moveHistoryDiv {
-  width: 60%;
-  height: 80%;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  overflow: hidden;
-}
+/* Error: expected "{".
+ *   ,
+ * 3 |     width: 60%;
+ *   |               ^
+ *   '
+ *   src/sass/MoveHistoryWidget.scss 3:15  root stylesheet */
 
-#moveHistoryList {
-  list-style: none;
-  padding: 0;
-  max-height: 100%;
-  overflow-y: scroll;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "{".\a   \2577 \a 3 \2502      width: 60%;\a   \2502                ^\a   \2575 \a   src/sass/MoveHistoryWidget.scss 3:15  root stylesheet';
 }
-
-.moveHistoryEntry {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  border-bottom: 1px solid #eee;
-}
-
-.moveHistoryEntryName {
-  width: 30%;
-  margin: 0;
-  font-weight: bold;
-}
-
-.moveString {
-  width: 50%;
-  margin: 0;
-}
-
-#scoreDiv {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-#moveScore, #totalScore {
-  margin: 5px 0;
-  font-weight: bold;
-}
-
-ul {
-  padding: 0px;
-  max-height: 100%;
-  overflow-y: scroll;
-}
-
-/*# sourceMappingURL=MoveHistoryWidget.css.map */
