--- a/src/sass/MoveHistoryWidget.scss
+++ b/src/sass/MoveHistoryWidget.scss
@@ -1,47 +1,34 @@
 .moveHistoryDiv{
-    width: 60%;
-    height: 80%;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    overflow: hidden;
+    width:inherit;
+    height:80%;
 }
-
-#moveHistoryList {
-    list-style: none;
-    padding: 0;
-    max-height: 100%;
-    overflow-y: scroll;
-}
-
-.moveHistoryEntry {
-    display: flex;
+#moveHistoryEntry{
+    display:flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    border-bottom: 1px solid #eee
+    margin-top:20px;
+    margin-right: 10px;
 }
-.moveHistoryEntryName{
-    width: 30%;
-    margin: 0;
-    font-weight: bold;
+#moveHistoryEntryName{
+    width:40%;
+    margin-top:0px;
+    margin-bottom:0px;
 }
-.moveString{
-    width: 50%;
-    margin: 0;
+#moveString{
+    width:40%;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    // margin-left: 10px;
 }
 #scoreDiv{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    margin-left:auto;
+    display:flex;
 }
 #moveScore, #totalScore{
-    margin: 5px 0;
-    font-weight: bold;
+    margin: 0px;
 }
-
 ul{
     padding:0px;
-    max-height:100%;
+    max-height:60%;
+    overflow: hidden;
     overflow-y: scroll;
 }
